Request#2: fixed nav slogan letter-spacing and fort-weight.

--- a/assets/styles/nav-userbar.scss
+++ b/assets/styles/nav-userbar.scss
@@ -19,7 +19,7 @@
 
   .zuc-nav-slogan {
     color: $white;
-    letter-spacing: .15vw;
+    letter-spacing: .1vw;
 
     @media #{$phone-only} {
       display: none;
